external-crates/move/crates/move-compiler/tests/move_2024/parser/global_access_exists_invalid.exp
error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/global_access_exists_invalid.move:13:26
   │
13 │         let _ : bool = ::exists<Self::R>(0x0);
   │                          ^^^^^^ Expected '::' after the address in this module access chain
   │
   = Access chains that start with '::' must be one of the following forms: 
       '::<address>::<module>', '::<address>::<module>::<member>'

